--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.71.1",
     "sonner": "^2.0.7",
-    "zod": "^4.3.6"
+    "zod": "^4.3.6",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
