feat: Introduce LMS feature roadmap, configure database package for direct source consumption, and automate database generation on postinstall.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "postinstall": "turbo db:generate"
   },
   "devDependencies": {
     "@types/minimatch": "^6.0.0",
