--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -2,8 +2,8 @@
   "name": "@workspace/database",
   "version": "0.0.0",
   "private": true,
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "scripts": {
     "build": "prisma generate && tsc",
     "db:generate": "prisma generate",
