--- a/turbo.json
+++ b/turbo.json
@@ -15,6 +15,9 @@
     "check-types": {
       "dependsOn": ["^check-types"]
     },
+    "db:generate": {
+      "cache": false
+    },
     "dev": {
       "cache": false,
       "persistent": true
