refactor: Implement TanStack Query for centralized, cached, and optimized data fetching across web components.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "packages/*"
   ],
   "dependencies": {
-    "@vercel/analytics": "^1.6.1"
+    "@vercel/analytics": "^1.6.1",
+    "youtube-transcript": "^1.2.1"
   }
 }
